*** empty log message ***

--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -115,8 +115,6 @@
 146 = Default constructor cannot handle exception type {0} thrown by implicit super constructor. Must define an explicit constructor
 147 = Unhandled exception type {0} thrown by implicit super constructor
 
-148 = Unnecessary cast from type {0} to type {1}
-149 = Unnecessary instanceof check, the expression of type {0} is already compatible with type {1}
 150 = The type of the expression must be an array type but it resolved to {0}
 151 = Must explicitly convert the char[] to a String
 152 = String constant is exceeding the limit of 65535 bytes of UTF8 encoding
@@ -147,6 +145,9 @@
 178 = The assignment to variable {0} has no effect
 179 = Possible accidental assignment in place of a comparison. A condition expression should not be reduced to an assignment
 180 = Superfluous semicolon
+181 = Unnecessary cast to type {1} for expression of type {0}
+182 = Unnecessary cast to type {1} for expression of type {0}. An argument of type {2} is expected
+183 = The expression of type {0} is already an instance of type {1}
 
 190 = Read access to enclosing field {0}.{1} is emulated by a synthetic accessor method. Increasing its visibility will improve your performance
 191 = Write access to enclosing field {0}.{1} is emulated by a synthetic accessor method. Increasing its visibility will improve your performance
