*** empty log message ***

--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -146,7 +146,7 @@
 179 = Possible accidental assignment in place of a comparison. A condition expression should not be reduced to an assignment
 180 = Superfluous semicolon
 181 = Unnecessary cast to type {1} for expression of type {0}
-182 = Unnecessary cast to type {1} for expression of type {0}. An argument of type {2} is expected
+182 = Unnecessary cast to type {1} for expression of type {0}. It is already compatible with the argument type {2}
 183 = The expression of type {0} is already an instance of type {1}
 
 190 = Read access to enclosing field {0}.{1} is emulated by a synthetic accessor method. Increasing its visibility will improve your performance
