File:  src/java/org/tigris/scarab/actions/admin/ArtifactTypeEdit.java #doSaveinfo() and #doSavegroups() - Handled the null situations for 'rmit' object.
File: src/templates/screens/admin/ArtifactTypeEdit.vm
#Handled the null situations for 'rmit' object. And also set its initial value to "".
This is to prevent  $rmit from referring to its last not-null value when the actual value
returned is null.

File: src/i18n/ScarabBundle_en_US.properties
#Added keys to alert when the artifact type is already removed from the project.

File: src/java/org/tigris/scarab/screens/Default.java
#doBuildTemplate()- getTitle(..) is executed in a try/catch block to ignore
NPE that would result when the module/issue type is null.


Issue: PCN19604
Reviewed by: Elicia
Committed by: Venkat

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -772,8 +772,10 @@ Deny=Deny
 Query=Query
 RoleX=Role X
 EnterIssueTemplate=Enter issue template
-IssueTypeNotFound=Issue type not found. 
+IssueTypeNotFound=Issue type not found.
 Here=here.
+IssueTypeRemovedFromModule=Issue type you were trying to edit has already been removed from the module.
+IssueTypeRemovedFromModuleAndProceed=Issue type you were trying to edit has already been removed from the module. To proceed, please click
 IssueTypeInfo=Issue type information
 IssueViewDisplayOptions=Issue view display options
 FullListOnSeparateScreen=Full list on separate screen
