--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -45,10 +45,6 @@ menu_edit_generaloptions = General Options...
 menu_edit_generaloptions_tooltip = Overall setup for Columba...
 menu_aspell_preferences = Configure ASpell
 
-# 09/16/02 ALP
-# Added as part of external editor support
-menu_edit_extern_edit = Use External Editor
-
 menu_edit_searchmessages = Search Messages...
 menu_view_sort = Sort Messages by
 menu_view_next = Next Message
@@ -144,7 +140,7 @@ menu_message_new_tooltip = Create a new message
 menu_message_print = Print
 menu_message_print_tooltip = Print selected message
 menu_message_save = Save Message Body As...
-menu_message_save_tooltip = Save selected message as...
+menu_message_save_tooltip = Save selected message body as...
 menu_message_reply = Reply
 menu_message_reply_tooltip = Reply to selected Message
 menu_message_bounce = Bounce
@@ -223,7 +219,7 @@ filtertoolbar_flagged = Show flagged messages
 filtertoolbar_expunged = Show expunged messages
 filtertoolbar_attachment = Show messages with attachment
 filtertoolbar_header = Subject or Sender contains
-filtertoolbar_clear = Reset all filters
+filtertoolbar_clear = Reset
 filtertoolbar_advanced = Search dialog...
 
 
@@ -237,8 +233,11 @@ attachmentsaveas=Save As ...
 attachmentsaveas_tooltip=Save this Attachment to disk
 attachmentview_mimeheader=View Mime-Header
 attachmentview_mimeheader_tooltip=View the Mime-Header of this Attachment
-menu_edit_extern_edit = Use External Editor
 
 menu_security=Security
 
 menu_utilities_importmailbox=Import Mailbox...
+
+filtertoolbar_advanced_tooltip=Opens the Search dialog
+
+filtertoolbar_clear_tooltip=Resets all filters
