[feature] added i18n support

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -240,3 +240,13 @@ menu_utilities_importmailbox=Import Mailbox...
 filtertoolbar_advanced_tooltip=Opens the Search dialog
 
 filtertoolbar_clear_tooltip=Resets all filters
+
+security_encrypt_success=Message was encrypted successfully
+
+security_encrypt_fail=Message encryption failed
+
+security_verify_success=Message was verified successfully
+
+security_verify_fail=Message verification failed
+
+security_verify_nokey=You don't have the right key to verify this message
