--- a/res/org/columba/mail/i18n/statusbar/message.properties
+++ b/res/org/columba/mail/i18n/statusbar/message.properties
@@ -11,3 +11,5 @@ logout=Logging out...
 no_new_messages=No new messages on server
 
 fetch_messages=Fetching {0}/{1} messages
+
+load_headers=Loading headers from cache...
