[feature] i18n support for status bar messages

--- a/res/org/columba/mail/i18n/statusbar/message.properties
+++ b/res/org/columba/mail/i18n/statusbar/message.properties
@@ -13,3 +13,5 @@ no_new_messages=No new messages on server
 fetch_messages=Fetching {0}/{1} messages
 
 load_headers=Loading headers from cache...
+
+search=Searching...
