[feature] i18n support for status bar messages

--- a/res/org/columba/mail/i18n/statusbar/message.properties
+++ b/res/org/columba/mail/i18n/statusbar/message.properties
@@ -15,3 +15,7 @@ fetch_messages=Fetching {0}/{1} messages
 load_headers=Loading headers from cache...
 
 search=Searching...
+
+fetch_flags_list=Fetching FLAGS list...
+
+fetch_header_list=Fetching header list...
