[feature] removed System.out.println statements, removed empty finally blocks, made debug messages conditional to MainInterface.DEBUG, added support for i18n of status bar messages

--- a/res/org/columba/mail/i18n/statusbar/message.properties
+++ b/res/org/columba/mail/i18n/statusbar/message.properties
@@ -19,3 +19,11 @@ search=Searching...
 fetch_flags_list=Fetching FLAGS list...
 
 fetch_header_list=Fetching header list...
+
+fetch_folder_list=Fetching folder list...
+
+fetch_headers=Fetching {0}/{1} headers
+
+search_in=Searching in {0}...
+
+select_path=Selecting {0}...
