--- a/res/org/columba/mail/i18n/statusbar/message.properties
+++ b/res/org/columba/mail/i18n/statusbar/message.properties
@@ -27,3 +27,5 @@ fetch_headers=Fetching {0}/{1} headers
 search_in=Searching in {0}...
 
 select_path=Selecting {0}...
+
+lucene_sync=Syncronizing Lucene index...
