--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -14,7 +14,7 @@
 3 = The type {0} is not visible
 4 = The type {0} is ambiguous
 5 = The type {0} is deprecated
-6 = The type {0} is an incorrectly specified nested type; replace the ''$'' with ''.''
+6 = The nested type {0} cannot be referenced using its binary name
 7 = The private type {0} is never used locally
 
 15 = Incompatible operand types {0} and {1}
@@ -236,12 +236,12 @@
 330 = {0} cannot be resolved or is not a valid superclass
 331 = Superclass {0} is not visible
 332 = Superclass {0} is ambiguous
-333 = Superclass {0} is an incorrectly specified nested type; replace the ''$'' with ''.''
+333 = Superclass {0} cannot be referenced using its binary name
 334 = Superclass {0} is defined in an inherited type and an enclosing scope
 335 = {0} cannot be resolved or is not a valid superinterface
 336 = Superinterface {0} is not visible
 337 = Superinterface {0} is ambiguous
-338 = Superinterface {0} is an incorrectly specified nested type; replace the ''$'' with ''.''
+338 = Superinterface {0} cannot be referenced using its binary name
 339 = Superinterface {0} is defined in an inherited type and an enclosing scope
 340 = Duplicate field {0}.{1}
 341 = Duplicate modifier for the field {0}
@@ -254,7 +254,7 @@
 350 = {2} cannot be resolved (or is not a valid type) for the field {1}.{0}
 351 = The type {2} is not visible for the field {1}.{0}
 352 = The type {2} is ambiguous for the field {1}.{0}
-353 = The field type {2} is an incorrectly specified nested type; replace the ''$'' with ''.''
+353 = The field type {2} cannot be referenced using its binary name
 354 = The field type {2} is defined in an inherited type and an enclosing scope
 355 = Duplicate method {0} in type {1}
 356 = Illegal modifier for argument {0}; only final is permitted
@@ -274,17 +274,17 @@
 370 = {2} cannot be resolved (or is not a valid type) for the argument {1} of the method {0}
 371 = The type {2} is not visible for the argument {1} of the method {0}
 372 = The type {2} is ambiguous for the argument {1} of the method {0}
-373 = The argument type {2} is an incorrectly specified nested type; replace the ''$'' with ''.''
+373 = The argument type {2} cannot be referenced using its binary name
 374 = The argument type {2} is defined in an inherited type and an enclosing scope
 375 = {1} cannot be resolved (or is not an exception type) for the method {0}
 376 = The exception type {1} is not visible for the method {0}
 377 = The exception type {1} is ambiguous for the method {0}
-378 = The exception type {1} is an incorrectly specified nested type; replace the ''$'' with ''.''
+378 = The exception type {1} cannot be referenced using its binary name
 379 = The exception type {1} is defined in an inherited type and an enclosing scope
 380 = {1} cannot be resolved (or is not a valid return type) for the method {0}
 381 = The return type {1} is not visible for the method {0}
 382 = The return type {1} is ambiguous for the method {0}
-383 = The return type {1} is an incorrectly specified nested type; replace the ''$'' with ''.''
+383 = The return type {1} cannot be referenced using its binary name
 384 = The return type {1} is defined in an inherited type and an enclosing scope
 385 = The import {0} conflicts with a type defined in the same file
 386 = The import {0} collides with another imported type
@@ -293,8 +293,8 @@
 390 = The import {0} cannot be resolved
 391 = The imported type {0} is not visible
 392 = The imported type {0} is ambiguous
-393 = The type {0} is an incorrectly specified nested type; replace the ''$'' with ''.''
-394 = The type {0} is defined in an inherited type and an enclosing scope
+393 = The imported type {0} cannot be referenced using its binary name
+394 = The imported type {0} is defined in an inherited type and an enclosing scope
 395 = Duplicate modifier for the variable {0}
 396 = Illegal modifier for the variable {0}; only final is permitted
 
