[feature] i18n support for status bar messages

--- a/res/org/columba/mail/i18n/statusbar/message.properties
+++ b/res/org/columba/mail/i18n/statusbar/message.properties
@@ -29,3 +29,5 @@ search_in=Searching in {0}...
 select_path=Selecting {0}...
 
 lucene_sync=Syncronizing Lucene index...
+
+send_message=Sending message...
