--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -520,6 +520,7 @@ MacroSavedQueries=saved queries
 QueryOne=query one
 QueryTwo=query two
 Alert=Alert!
+Unavailable=Unavailable
 
 ## Queries
 Click=Click on name to modify the saved query. Click on availability to execute.
@@ -1157,6 +1158,7 @@ IssueLastModifiedBy=Issue {0} last modified by
 
 ## ReportIssue
 IssueNoLongerValid=The issue is no longer valid.
+DupeCheckSkippedForLackOfResources=Duplicate issue check was skipped.
 IssueTypeUnavailable=The issue type you were entering became unavailable.
 
 ## QueryList
@@ -1249,6 +1251,7 @@ QueryParserError=Search engine could not parse a text query.  Please review the 
 SomeIssueIdsNotValid=Some issue ID's in the original list are not valid: {0}
 SomeIssuePKsNotValid=Database did not agree with specified issue list.
 ErrorProcessingQuery=There was an error processing your query: {0}
+ResourceLimitationsPreventedSearch=The current load on the application, prevented execution of the query.  Please try again later.
 
 ## ***********************************************************************
 ## Misc Java Objects
