Handle mid-air collisions while moving an issue:
File:src/java/org/tigris/scarab/actions/ModifyIssue.java
#doMove() - Check for collision before moving the artifact
#doCopy() - Check for collision before moving the artifact

File:src/templates/screens/ViewIssue.vm
Check for collision first if the previous action was "MoveIssue"

File:src/java/org/tigris/scarab/tools/ScarabRequestTool.java
#getIssue(String id): Different alert messages are provided now when the issue
isnull and when the issue is deleted.

File:src/java/org/tigris/scarab/actions/MoveIssue.java
The class extends BaseModifyIssue.java now instead of
RequiresLoginFirstAction.java to inherit method that checks collisions.
#doValidate() - Check for collision before validating
#doSaveissue() - Check for collision before saving

File:src/templates/screens/MoveIssue.vm
#Added a hidden parameter "mod_ts" to check for collision

File:src/templates/screens/MoveIssue2.vm
#Added hidden parameters "mod_ts" and "id" to check for collision.

File:src/i18n/ScarabBundle_en_US.properties
#New Property - "IssueMoved=Issue has been moved to a different module" added.


Issue: PCN 19592
Reviewed by: Elicia David
Committed by:Venkat

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1155,7 +1155,6 @@ AttributeSetToNewValue={0} set to ''{1}''
 AttributeChangedFromToNewValue={0} changed from ''{1}'' to ''{2}''
 IssueLastModifiedBy=Issue {0} last modified by
 
-
 ## ReportIssue
 IssueNoLongerValid=The issue is no longer valid.
 DupeCheckSkippedForLackOfResources=Duplicate issue check was skipped.
@@ -1219,6 +1218,7 @@ CannotMoveToSameModule=You cannot move an issue to the same module/issue type.
 SelectModuleAndIssueType=Please select a module and issue type.
 OnlySelectOneDestination=Please select only one destination.
 ReasonRequired=A reason is required to perform a move or copy.
+IssueMoved = Issue has been moved to a different module
 
 # Approval
 ApprovalEmailBody=The user {0} has just {1, choice, 0#rejected|1#approved|2#commented on} your {2, choice, 0#query|1#issue template info} ''{3}''.
