--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -250,3 +250,7 @@ security_verify_success=Message was verified successfully
 security_verify_fail=Message verification failed
 
 security_verify_nokey=You don't have the right key to verify this message
+
+menu_message_opennew=Open Message in new Window
+
+menu_message_opennew_tooltip=Opens the selected message in a separate window
