--- a/antadapter/org/eclipse/jdt/internal/antadapter/messages.properties
+++ b/antadapter/org/eclipse/jdt/internal/antadapter/messages.properties
@@ -1,3 +1,14 @@
+###############################################################################
+# Copyright (c) 2000, 2003 IBM Corporation and others.
+# All rights reserved. This program and the accompanying materials 
+# are made available under the terms of the Common Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/cpl-v10.html
+# 
+# Contributors:
+#     IBM Corporation - initial API and implementation
+###############################################################################
+### ant tasks messages.
 ant.jdtadapter.info.usingJDTCompiler=Using JDT compiler
 ant.jdtadapter.error.compilationFailed=Compilation failed. Compiler errors are available in {0}
 ant.jdtadapter.error.cannotFindJDTCompiler=Cannot find the JDT compiler
