--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1218,7 +1218,7 @@ CannotMoveToSameModule=You cannot move an issue to the same module/issue type.
 SelectModuleAndIssueType=Please select a module and issue type.
 OnlySelectOneDestination=Please select only one destination.
 ReasonRequired=A reason is required to perform a move or copy.
-IssueMoved = Issue has been moved to a different module
+IssueMoved = Issue has been moved to a different module.
 
 # Approval
 ApprovalEmailBody=The user {0} has just {1, choice, 0#rejected|1#approved|2#commented on} your {2, choice, 0#query|1#issue template info} ''{3}''.
