* src/java/org/tigris/scarab/actions/AssignIssue.java -    #doAdd(): It is checked whether the selected user attributes exist in the     artifact type before adding the attributes to the assignee list. It is     possible that some of the attributes might have been concurrently removed     by the project owner.  If it is removed alert the user.
   #doSave(): It is checked whether the selected user attributes exist in the
    artifact type before associating them with artifact. It is possible that
    some of the attributes might have been concurrently removed by the project
    owner. If it is removed alert the user.

 * src/java/org/tigris/scarab/om/AbstractScarabModule.java -
    getRModuleAttribute(): The method verifies whether the given attribute
    exists in the artifact type or not. if it does not exist, the method
    returns null object(rma) to the caller resulting in NPE. To avoid this we
    check the rma object, if it is null we explicitly throw ScarabException.
    This will be sutitably handled in the caller method.

 * src/java/org/tigris/scarab/om/Issue.java -

    changeUserAttributeValue() and deleteUser() are called from "doSave()" method
    of "AssignIssue.java" to update old attribute with new attribute.

    actionString = getUserDeleteString(assigner, assignee,
                                                   oldAttVal.getAttribute());
    The above statement throws NPE when the old attribute is removed from
    assignee list which is not exist in the artifact type.
    The exception is caught and ignored but logged.

 * src/i18n/ScarabBundle_en_US.properties -
 * src/i18n/i18n_overrides/OverridesScarabBundle_en.properties
   UserAttributeRemoved : Added key to alert when user attributes were removed
   from the issue/artifact type.

* src/java/org/tigris/scarab/om/RModuleAttribute.java
 * added call to removeInstanceFromCache() from delete() when attributes are
   removed.

* src/java/org/tigris/scarab/om/RModuleAttributeManager.java
 * Ad

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1154,6 +1154,7 @@ AttributeHasBeenUndefined={0} has been undefined.
 AttributeSetToNewValue={0} set to ''{1}''
 AttributeChangedFromToNewValue={0} changed from ''{1}'' to ''{2}''
 IssueLastModifiedBy=Issue {0} last modified by
+UserAttributeRemoved=User attribute(s) {0} removed from the issue type.
 
 ## ReportIssue
 IssueNoLongerValid=The issue is no longer valid.
