*** empty log message ***

--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -94,7 +94,6 @@
 117 = The static method {1}({2}) from the type {0} should be accessed in a static way
 118 = The private method {1}({2}) from the type {0} is never used locally
 119 = The static method {1}({2}) from the type {0} should be accessed directly 
-120 = The boolean method {1}({2}) from the type {0} is throwing exception(s). If it is a predicate, then it should probably not do so
 
 130 = The constructor {0}({1}) is undefined
 131 = The constructor {0}({1}) is not visible
@@ -327,3 +326,5 @@
 440 = ''assert'' should not be used as an identifier, since it is a reserved keyword from source level 1.4 on
 
 450 = {0} {1}
+
+460 = Empty block should be documented
