*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -108,11 +108,11 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      none                 disable all warnings\n\
 \      allDeprecation       deprecation including inside deprecated code\n\
 \      assertIdentifier     ''assert'' used as identifier\n\
-\      booleanThrow         boolean method throwing exceptions\n\
 \      charConcat         + char[] in String concat\n\
 \      conditionAssign      possible accidental boolean assignment\n\
 \      constructorName    + method with constructor name\n\
 \      deprecation        + deprecation outside deprecated code\n\
+\      emptyBlock           undocumented empty block\n\
 \      fieldHiding          field hiding another variable\n\
 \      indirectStatic       indirect reference to static member\n\
 \      intfNonInherited   + interface non-inherited method compatibility\n\
