* TemplateList.java: doCreateNew(): test for null current issue type and give error messa ge if issue type has been disabled. * screens/TemplateList.java: getTitle():if current issue type is disabled, do not show it  in the title. *  TemplateList.vm, SaveTemplate.vm: if current issue type has become disabled, do not re ender page, show alert message instead. * ScarabBundle_en_US.properties: add resource "IssueTypeNotAvailable" Issue number:  20645 Reviewed by:   kmaples

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1821,3 +1821,4 @@ UITP10S5=button to return to the Enter new screen.
 FromThe=From the
 ScreenClickThe=screen click the
 CannotEditTemplate=You do not have permissions to edit this template.
+IssueTypeNotAvailable=The issue type for which you were entering data is no longer available.
