* RModuleAttribute.java: delete(), Attribute.java:  deleteModuleMappings():    when deleting attribute globally, force deletion from module even when artifact type is locked. * ScarabBundle_en_US.properties: add error messages. * ModuleAttributeEdit.vm, IssueTypeAttributeEdit.vm:  "Here", not "here" is the correct i18n resource. Issue number: 20720 Reviewed by:   kmaples

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -868,6 +868,7 @@ AttrMappedToModules=This attribute is associated with one or more modules. If yo
 AttrMappedToIssueTypes=This attribute is associated with one or more issue types. If you delete it, and then undelete it later, you will have to add it back to those issue types.
 NoUserAttributeSelected=No user attribute was selected for removal.
 NoAttributeSelected=No attribute was selected for removal.
+CannotDeleteAttributeFromLockedIssueType=You cannot delete this attribute, because this issue type is locked.
 
 ## XMLExport
 XMLExportSettingsScreen=This screen allows you to export all of the global settings and currently selected module settings (optionally including the user data) into an XML file. This file can either be saved to disk (with the given name) or exported into your browser window and saved.
