[intern] added mnemonics

--- a/res/org/columba/mail/i18n/dialog/folder.properties
+++ b/res/org/columba/mail/i18n/dialog/folder.properties
@@ -13,3 +13,7 @@ name=Name:
 error_char_title=Bad character
 
 error_char_text=The character / is not allowed here.
+
+new_folder_mnemonic=n
+
+name_mnemonic=n
