Prevent control from leading to "Project Tracker:error copy or move?" page, when a project is just unlocked (when "action" is not specified).
* src/templates/screens/MoveIssue.vm
  '#' prepended to "elseif" statement.

* src/java/org/tigris/scarab/screens/MoveIssue.java
  getTitle(): Target set to "ViewIssue.vm" and alerted the user if
  there is no "action" available.

* src/i18n/ScarabBundle_en_US.properties
  NoActionSpecified: Resource added to alert the user when move/copy
  "action" is not specified for the MoveIssue screen.

Issue: PCN19931
Submitted by: Arun
Reviewed by: John McNally, Kevin Maples, Daniel Rall

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1221,6 +1221,7 @@ SelectModuleAndIssueType=Please select a module and issue type.
 OnlySelectOneDestination=Please select only one destination.
 ReasonRequired=A reason is required to perform a move or copy.
 IssueMoved = Issue has been moved to a different module.
+NoActionSpecified=No action (Copy or Move) specified.
 
 # Approval
 ApprovalEmailBody=The user {0} has just {1, choice, 0#rejected|1#approved|2#commented on} your {2, choice, 0#query|1#issue template info} ''{3}''.
