Completely rewrote the reports doc to reflect new reporting functionality. All keys in ##UserReports section affected. Issue 16526 Reviewed by tberry and jmcnally

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1651,20 +1651,78 @@ ImportingIssuesP4B1=Browse and select the file or enter the file name to import.
 Button=button
 
 ## UserReports
-ReportsOverview=Reports: overview
-ReportsP1=Reports allow you to track the progress of your project. You can easily define, save and run reports in an issue type. Defining and using reports is a simple process:
-ReportsP2=Define your type of report
-ReportsP3=Determine your attribute filters
-ReportsP4=Select the row and column content
-ReportsP5Head=Types of Reports
-ReportsP5=There are two types of reports available within Scarab: comparative analysis and rate of change.
-ReportsP5S2= The comparative analysis report type is a snap shot of a single point in time. Use this report type to compare attributes,options and/or users at a single point in time.
-ReportsP5S3= The rate of change report allows you to track changes in your project over a period of time.
-ReportsP6Head=Attribute filters
-ReportsP6S1=The primary filter attribute (PFA) defines the subset of issues from which the report is drawn.
-ReportsP6S2=If you have a several similar attributes defined in your PFA you may wish to display an average of the options.
-ReportsP7Head=Display criteria
-ReportsP7=The final step in defining a report is to set the display options. Use this area to define the row and column content.
+ReportsOverview=Using Scarab report builder
+ReportContent=Row and column content
+GeneratingReports=Generating and saving reports
+ReportsP1=Scarab allows you to build reports to provide snapshot status reviews of issue  activity. You can tailor the reports to fit your specific needs by defining which data types are included and  selecting the output format. The report data types can include attributes and options, users, and dates. The report can be formatted for the web browser, Excel (.xls), or as a tab separated list (.txt). You can define reports to include a single or multiple issue types in a single or multiple modules. 
+ReportsP2=To access Scarab reports:
+ReportsP3=Select module in which you want to start defining the report.
+ReportsP4=Click on the <b>Reports</b> link. This will take you to the <b>Saved reports list</b> page. You can select a previously saved report, or you can build a new report.
+ReportsP5=Select the report you wish to run by clicking on the report name, or access the report builder by  clicking  the <b>Create new</b> button.
+ReportsP6=The Scarab report build consists of three tabs:  
+ReportsP7=The <strong>Report information</strong> tab allows you to define the scope of the report and enter summary information. The summary information is for  saving reports. There are two sections on this tab: <strong>Artifact types selected for this report</strong>, and <strong>Summary</strong>. 
+ReportsP8=Selecting issue types
+ReportsP9=The issue type included in the report defaults to the currently selected issue type. If you wish to define a report for a different or multiple issue types/modules, click the <strong>Edit list</strong> button. This will take you to the <strong>Cross module/issue type list</strong> page. You can use this page to define a list of issues types within the current module or across multiple modules to be included in your report.  It is highly recommended that the issue types for the report be chosen prior to working with the  content tabs.  Though it is possible to modify the list later, additions that conflict with already entered data on the other tabs will not be allowed.
+ReportsP10=On the <strong>Cross module/issue type list</strong> page, you can perform the following tasks:
+ReportsP11=Select a previously saved cross module list to use.
+ReportsP12=Remove issue types from your report by checking the checkbook next to any issue type in the top section of the page and clicking the <strong>Remove selected</strong> button. To remove all issue types, click the <strong>Remove all</strong> button.
+ReportsP13=Add issue types to your report by checking the checkbox next to any issue type in the top section of the page and clicking the <strong>Add selected</strong> button.
+ReportsP14=When you have selected the desired group of issue types for your report, you can save the list for future use by clicking the <strong>Save</strong> button.
+ReportsP15=Click the <strong>Done</strong> button to return to the <strong>Report information</strong> page where the selected issue types will appear in the <strong>Artifact types selected for this report</strong> section.
+ReportsP16=Entering Summary information
+ReportsP17=The <strong>Summary</strong> section of the <strong>Report information</strong> tab allows you to enter information for saving your report. This information is optional and can be added at any point report creation process.  You can provide the following information:
+ReportsP18=Enter a name for your report in the <strong>Name</strong> field.
+ReportsP19=Enter a description in the <strong>Report description</strong> field.
+ReportsP20=Select the report <strong>Availability</strong>. If you have permissions that allow you to make your reports available to other module members, the Availability field will appear allowing you to choose whether to save the report for personal use or for module use.
+ReportsP21=Select the format for the report. The available formats are Web, Excel (.xls), and Tab separated (.txt). 
+ReportsP22=When you have entered all of the desired information, click the <strong>Update</strong> button to add this information to your report.
+ReportsP23=The <strong>Row content</strong> and <strong>Column content</strong> tabs allow you to define and organize the data included in your report. These tabs contain identical information and options; however, you can select different data types on each tab. This allows you to create unique, in depth reports. Once both the row and column content have been defined, you can generate the report.
+ReportsP24=Data types
+ReportsP25=The <strong>Row/Column criteria</strong> section allows you to select the type of data presented in the rows or columns of your report. The available selections are:
+ReportsP26=When this data type is selected, you can choose from among the attributes and options defined for the selected issue types.
+ReportsP27=When this data type is selected, you can choose from among the module members and specify a user attribute for each user selected.
+ReportsP28=When this data type is selected, you can define dates for each row or column of your report.
+ReportsP29=The option selected in the <strong>Select content type</strong> field determines the data available in the rest of the sections of these tabs. Only one content type can be used for each heading. If you choose Date(s) as a content type on either the <strong>Row content</strong> or <strong>Column content</strong> tab, it must be  the only heading on that axis. However, you can  define user criteria for one or more heading levels and option attributes for other headings on the same axis. Changing the content type to Date(s) after defining a set of user or attribute/option criteria for either the row or column content tabs will discard the previously entered data for that tab.
+ReportsP30=Sorting  attribute options and user attributes into headings and groups
+ReportsP31=When generating reports containing attribute options and user attributes, the organization of the data can mean the difference between a useful analysis tool and an unreadable mass of numbers. To help you organize your data, Scarab allows you to arrange report data into headings which are combined in the final report to allow multiple criteria per cell.
+ReportsP32=Headings are defined solely by the data  they contain. To create headings within your report:
+ReportsP33=In the <strong>Report builder</strong>, click on either the <strong>Row content </strong>tab or the <strong>Column content</strong> tab.
+ReportsP34=Select the content type for this heading in the  <strong>Select content type</strong> drop down box.
+ReportsP35=Select the  options you wish to include in the first heading of your report.
+ReportsP36=Click the <strong>Update</strong> button.
+ReportsP37=If you wish to include more than one heading in your report, in the <strong>axis content: Row/Column headings section</strong>, click the <strong>Add another heading</strong> button.
+ReportsP38=Select the content type for this heading in the <strong>Select content type</strong> drop down box. If the previously defined heading contains user attributes or attributes/options, you cannot select the Date(s) content types. Doing so will discard the previously entered heading.
+ReportsP39=Select the  options you wish to include in this heading.
+ReportsP40=When finished, click the <strong>Update</strong> button.
+ReportsP41=Continue adding headings and selecting options in this manner until all the options you wish to see in your report have been included.
+ReportsP42=You can edit a previously defined heading by clicking on the radio button next to the heading and clicking the <strong>Edit selected heading</strong> button. You can delete previously defined heading by clicking on the radio button next to the heading and clicking the <strong>Remove selected heading</strong> button. 
+ReportsP43=Scarab allows you to further organize reports data by grouping the attributes and options within your  headings.  For example, if options P1, P2, P3, and P4 for the Priority attribute have all been selected, you could group P1 and P2 as "high priority" and P3 and P4 as "low priority".
+ReportsP44=You must have defined at least one heading containing <strong>Attribute/option(s)</strong> in your report before you can define groups.  To group options within headings:
+ReportsP45=On the <strong>Row content</strong> tab or the <strong>Column content</strong> tab, select a heading containing the <strong>Attribute/option(s)</strong> content type and click the <strong>Edit selected heading</strong> button.
+ReportsP46=In the group related data section, enter a name for the group and click the <strong>Add new</strong> button. Repeat this step if you wish to have additional groups within this heading.
+ReportsP47=In the <strong>Grouping report data-set attributes/options</strong> section, select the group you want each option to appear in from the <strong>Group name</strong> drop down box next to each attribute/option.
+ReportsP48=When done, click the <strong>Update</strong> button.
+ReportsP49=Selecting users and attributes
+ReportsP50=Reporting on user attributes allows you to determine how the workload in your module is  distributed. You can use the <strong>Users (by attribute)</strong> data type to create reports thatindicate how issues are assigned or otherwise associated with users.</p>
+ReportsP51=To define  <strong>Users (by attribute)</strong> reporting criteria:
+ReportsP52=On either the <strong>Row content</strong> or <strong>Column content</strong> tab, select <strong>User (by attribute)</strong> from the <strong>Select content type</strong> drop down box.
+ReportsP53=In the Users table, select the checkbox in the Select column and the desired user attribute in the drop down box in the Association column of the user you wish to include.
+ReportsP54=Click the <strong>Add selected to assignee list</strong> button.
+ReportsP55=To include multiple user attributes for a single user, you must add the user again with the additional attribute selected. For instance, if you wanted to generate a report to indicate which users have ownership and quality assurance responsibility for the  issues in your module, you would need to select each user twice--first with the <strong>Assigned to</strong> user attribute, then with the <strong>QA contact</strong> user attribute.
+ReportsP56=Reporting by dates
+ReportsP57=To help you determine how your module is progressing, Scarab allows you generate reports based on  dates/times. Date/time reports provide a snapshot of issue activity at a single point in time. You can design reports to include several date/times to show the progress over a specific period of time.
+ReportsP58=To create  date/time reports:
+ReportsP59=On either the <strong>Row content</strong> or <strong>Column content</strong> tab, Select <strong>Date(s) </strong>from the <strong>Select content type</strong> drop down box.
+ReportsP60=In the <strong>Select row/column (dates) content</strong> table, use the drop down boxes to select the date and time you want to include in your report.
+ReportsP61=Click the <strong>Add single date/time</strong> button.
+ReportsP62=Continue adding dates in this fashion until all desired dates are included.
+ReportsP63=You can include future dates in your report. A row or column with a future date will appear blank in the generated report; however, the row or column will populate when the report is regenerated after the date has passed. This can be used to create progress reports which are generated repeatedly. By adding dates well into the future and saving the report, you can minimize the amount of time spent defining frequently generated reports.
+ReportsP64=Once you have defined both row and column content, the <strong>Generate report</strong> button will appear. Clicking this button will create the report in the format you have selected on the <strong>Report information</strong> tab. 
+ReportsP65=When viewing the report in the Web format, you can perform the following tasks:
+ReportsP66=Rotate the  report by clicking the <strong>swap row and column </strong> link.
+ReportsP67=Save the report by clicking the <strong>Save this report</strong> button. If you have not entered summary information on the <strong>Report information </strong>tab, you will be returned to that tab. You must enter a name for the report and click the <strong>Update</strong> button to  add the summary information to the report. Click the <strong>Save this report</strong> button again to save.
+ReportsP68=Export the report to Excel or tab separated values by selecting the desired export format from the <strong>Export results to:</strong> drop down box.
+
 
 ## UserQuerySaved
 AdvancedQueries=Advanced queries
