Added keys for new doc UserQueryCrossProject.vm
New keys:
CrossProjectQueries
CrossProjectP1
CrossProjectP2
CrossProjectP3
CrossProjectP4
Issue number: 20004
Obtained from:
Submitted by:
Reviewed by:   beril

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1786,6 +1786,13 @@ UQAP1S4=button will run the query.
 UQAP2=You can define values for some, none or all of the attributes. Scarab will search the knowledge base for issues that contain all of the values you have specified. The advanced query form allows you to define fine grained search criteria. There are three types of search criteria available on the advanced query form:
 SearchKnowledgeBase=Search the knowledge base
 
+## UserQueryCrossProject
+CrossProjectQueries=Cross module queries
+CrossProjectP1=Cross module queries allow you to search  multiple modules or issue types or both in a single query.  Upon accessing Scarab from the navigation bar, you can click on the <strong>Build cross module query</strong> tab. On this tab, you can either select a previously saved cross module query, or create a new one.
+CrossProjectP2=The <strong>Projects / issue in this domain</strong> table lists all issue types in all modules available to be added to your query. Projects are only available if you have permissions that allow you to query in that module. Add issue types to your query by checking the checkbox in the <strong>Select</strong> column and clicking the <strong>Add selected</strong> button. This will move the selected issue types to the <strong>Build list of issue types</strong> section. You can remove all issue types from you query by clicking the <strong>Remove all</strong> button or remove only selected issue types by clicking the <strong>Remove selected</strong> button. 
+CrossProjectP3=Once you have selected all of the issue types you want inclused in your query, you can save the list for future use by clicking the <strong>Save</strong> button. You must then complete the <strong>Name</strong> field and click the <strong>Save</strong> button again.
+CrossProjectP4=To begin you query, click the <strong>Define query</strong> button. This will take you to the <strong>Advanced query</strong> page where you can define your query criteria as you would for a single module query. For details on building queries, see Advanced query.
+
 StateChange= State Change
 UQAP3=You can use each of these sections individually or a combination to qualify your searches. If you run a query without defining any attributes all issues associated with the logged in user ID will be returned. 
 UQAP4=section provides a space for you to define values for issue attributes. Each attribute that is available to your issue type is represented here. You can define values for all, some or none of the issue attributes. You can also limit your search to a range of issues or creation dates. 
